--- a/public/index.css
+++ b/public/index.css
@@ -5,6 +5,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'IBM Plex Serif';
+    src: url('/font/IBMPlexSerif-Bold.ttf') format('truetype')
+    font-weight: 700;
+    font-style:normal;
+}
+
 div {
   box-sizing: border-box;
 }
