--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,11 @@
 @font-face {
+    font-family: 'IBM Plex Mono';
+    src: url('/font/IBMPlexMono-ExtraLight.ttf') format('truetype')
+    font-weight: 200;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'IBM Plex Serif';
     src: url('/font/IBMPlexSerif-Light.ttf') format('truetype')
     font-weight: 300;
